--- a/css/subject.css
+++ b/css/subject.css
@@ -7,17 +7,6 @@
     position: relative;
 }
 
-.newshub_subjects::after {
-    content: "";
-    position: absolute;
-    width: 50%;
-    height: 5px;
-    top: 100%;
-    left: 0;
-    background-color: #999;
-    border-radius: 5px;
-}
-
 .newshub_sub_big {
     width: 65%;
     position: relative;
@@ -36,10 +25,6 @@
 
 .newshub_subjects_item:first-child>a {
     font-size: 2rem;
-}
-
-.newshub_subjects_item:first-child::after {
-    display: none;
 }
 
 .newshub_sub_left {
@@ -63,7 +48,12 @@
 
 .sub_right_item>h3,
 .subject_content>h3 {
-    font-size: 1rem;
+    font-size: 1.2rem;
+}
+
+.sub_right_item>img {
+    width: 100%;
+    display: none;
 }
 
 .sub_right_item>p,
@@ -250,5 +240,13 @@
 
     .subject_under_item {
         width: 100%;
+    }
+
+    .newshub_subjects::after {
+        width: 100%;
+    }
+ 
+    .sub_right_item>img {
+        display: block;
     }
 }
