--- a/css/main.css
+++ b/css/main.css
@@ -1100,3 +1100,32 @@ a:hover>.login_nav {
     position: relative;
     top: -15px;
 }
+
+@keyframes opa {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.goTop {
+    position: fixed;
+    background-color: var(--cover-color);
+    bottom: 20px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    z-index: 9999;
+    font-size: 1.2rem;
+    cursor: pointer;
+    display: none;
+    animation: opa .5s linear;
+}
+
+.goTop:hover {
+    background-color: rgba(163, 162, 162, 0.4);
+}
