--- a/css/search.css
+++ b/css/search.css
@@ -98,6 +98,9 @@
 }
 
 .searched_contents {
+    width: 100%;
+    height: 900px;
+    overflow-y: scroll;
     margin-top: 30px;
 }
 
@@ -125,6 +128,7 @@
 
 .search_li>img {
     width: 40%;
+    object-fit: cover;
 }
 
 .search_content>h3 {
